[package]
name = "witwiki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.10"
axum = "0.5.6"
axum-extra = "0.3.3"
by_address = "1.0.4"
cookie = "0.16"
rusqlite = "0.27.0"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.12", features = ["limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
