[package]
name = "witwiki_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
# remove rusqlite in favor of sqlx
rusqlite = { version = "0.27.0", features = ["bundled"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
tokio = { version = "1.36", features = ["full"] }

