[package]
name = "witwiki_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4"
axum = "0.5.16"
axum-extra = "0.3.7"
by_address = "1.0.4"
chrono = "0.4.22"
comrak = "0.14.0"
cookie = "0.16"
git2 = "0.15.0"
jsonwebtoken = "8.1.1"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
tower = { version = "0.4.13", features = ["limit"] }
tower-http = { version = "0.3.4", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
witwiki_common = { "path" = "../witwiki_common"}
witwiki_db = { "path" = "../witwiki_db"}
witwiki_difffoo = { "path" = "../witwiki_difffoo"}

